--- a/css/styles.css
+++ b/css/styles.css
@@ -155,38 +155,40 @@ section{
 }
 
 .c-logo{
-    order: 2;
-    flex-basis: 100%;
-    font-size: 1.8rem;
-    display: flex;
+    order: 1;
+    flex-basis: 50%;
     justify-content: center;
+    align-items: center;
     padding: .5rem;
+    width: 110px;
+    height: 50px;
 }
 
 .c-logo iframe{
-    height: 200px;
-    width: 200px;
+    height: 34px;
+    width: 98px;
+    border: none;
 }
 
 .phone{
-    flex-basis: 100%;
-    order: 1;
+    flex-basis: 50%;
+    order: 2;
     display: flex;
     padding: 1rem;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .phone iframe{
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     margin-right: .2rem;
     cursor: pointer;
 }
 
 .phone p{
-    font-size: 1rem;
+    font-size: .7rem;
     margin-left: .2rem;
     font-weight: 700;
 }
