--- a/css/styles.css
+++ b/css/styles.css
@@ -204,17 +204,13 @@ div.looker-btn img{
 }
 
 .c-logo{
-    flex-basis: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1.2rem;
+    margin: 0 auto;
+    padding: 1rem 0 2.2rem 0;
 }
 
 .c-logo iframe{
-    height: 45px;
-    width: 98px;
-    border: none;
+    height:100%;
+    width: 100%;
 }
 
 .menu-zone{
