--- a/css/styles.css
+++ b/css/styles.css
@@ -628,6 +628,7 @@ div.menu-movil span{
     background-color: #ffffff;
     margin-bottom: 2rem;
     box-shadow: 0px 0px 6px .2px rgba(83,87,90,0.5);
+    border-radius: 5px;
 }
 
 .card{
