--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ ul.list-contact li{
     height: 25px;
 }
 
-.menu-zone div button{
+.menu-zone button{
     position: absolute;
     height: 25px;
     z-index: 1;
@@ -268,6 +268,11 @@ ul.list-contact li{
 div.menu-movil{
     width: 20px;
     height: 20px;
+}
+
+div.menu-movil img{
+    width: 100%;
+    height: 100%;
 }
 
 div.menu-movil:hover{
@@ -399,7 +404,7 @@ div.menu-movil span{
 
 .hero{
     position: relative;
-    min-height: 68vh;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -408,8 +413,8 @@ div.menu-movil span{
 
 .hero-img{
     position: absolute;
-    background-image: url(../img/hero3.jpg);
-    background-position: center right;
+    background-image: url(../img/hero.jpg);
+    background-position: center;
     height: 100%;
     filter: brightness(.6);
     width: 100%;
@@ -455,10 +460,20 @@ div.menu-movil span{
     transform:translateX(300%);
 }
 
+.hero-description{
+    margin: 0 auto;
+    width: 90%;
+}
+
+.hero-description p{
+    color: #ffffff;
+    font-size: 1rem;
+}
+
 
 @media(min-width:768px){
    .hero{
-       min-height: 80vh;
+       min-height: 90vh;
    }
 
    .hero-title{
@@ -479,186 +494,5 @@ div.menu-movil span{
    }
 }
 
-
-/* anima el titulo*/
-
-
-
 /*  Services ----- */
 
-.section{
-    background-color: var(--gray);
-    padding-bottom: 1rem;
-}
-
-.section h2{
-    color: var(--dark);
-    font-size: 2.8rem;
-    position: relative;
-    width: 50%;
-    margin: 0 auto;
-}
-
-@media(min-width:768px){
-    .section h2{
-        width: 25%;
-    }
-}
-
-.title-services::before{
-    content: '';
-    left: 50%;
-    top: 115%;
-    transform: translateX(-50%);
-    position: absolute;
-    height: 5px;
-    width: 100px;
-    background-color: var(--dark);
-    animation-name: title-services;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-}
-
-@keyframes title-services {
- from {
-     width: 0;
- }
- to{
-     width: 100%;
- }
-}
-
-@media(min-width:758px){
-    .title-services{
-        width: 20%;
-    }
-
-    .title-services::before{
-        width: 20%;
-    }
-}
-
-
-.card-zone{
-    margin-top: 3rem;
-}
-
-
-.card{
-    background-color: #ffffff;
-    margin-bottom: 2rem;
-    box-shadow: 0px 0px 6px .2px rgba(83,87,90,0.5);
-    border-radius: 5px;
-}
-
-.card img{
-    width: 100%;
-    max-width: 550px;
-    margin-bottom: .4rem;
-}
-
-.card-content{
-    padding: 1rem 1.3rem;
-    margin-bottom: 2rem;
-}
-
-.card p{
-    font-size: 1rem;
-    margin-bottom: 1.3rem;
-}
-
-.card h3{
-    font-size: 1.8rem;
-    color: var(--dark);
-}
-
-.card .description-travel{
-    margin-top: .7rem;
-    margin-bottom: 1.5rem;
-}
-
-.card .link-more{
-    display: block;
-    padding: 1rem .5rem;
-    font-size: 1rem;
-    text-transform: uppercase;
-    color: var(--dark);
-    font-weight: bold;
-    position: relative;
-    transition: all .3s ease-in;
-}
-
-
-.link-more::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background-color: var(--grayAnimationButton);
-}
-
-
-.link-more-bg{
-    background-color: var(--gray);
-    transition: all .1s ease-in;
-}
-
-
-@media(min-width:768px){
-    .card-zone{
-        display: flex;
-    }
-
-    .card img{
-        height: 300px;
-    }
-
-    .card-container{
-        padding: 0 1rem;
-    }
-    
-}
-
-
-/* about us */
-
-.about{
-    padding-top: .5rem !important;
-}
-
-.title-about::before{
-    content: '';
-    left: 50%;
-    top: 115%;
-    transform: translateX(-50%);
-    position: absolute;
-    height: 5px;
-    width: 100%;
-    background-color: var(--dark);
-    animation-name: title-about;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-}
-
-@keyframes title-about {
- from {
-     width: 100%;
- }
- to{
-     width: 0;
- }
-}
-
-@media(min-width:768px){
-
-}
-
-.about-description{
-    margin-top: 3rem;
-}
-
-.about-description p{
-    font-size: 1rem;
-}
